rename volume specs to volumes

--- a/config/crd/bases/core.opni.io_alertingclusters.yaml
+++ b/config/crd/bases/core.opni.io_alertingclusters.yaml
@@ -649,7 +649,7 @@ spec:
                           - name
                           type: object
                         type: array
-                      extraVolumeSpec:
+                      extraVolumes:
                         items:
                           properties:
                             volume:
