Add storage class option to charts

--- a/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/statefulset_v2.yaml
@@ -178,6 +178,9 @@ spec:
         name: plugins
       spec:
         accessModes: [ "ReadWriteOnce" ]
+        {{- if .Values.global.storageClass }}
+        storageClassName: {{ .Values.global.storageClass }}
+        {{- end }}
         resources:
           requests:
             storage: 2Gi
