configure log level for open telemetry collectors
Signed-off-by: Alexandre Lamarre <alexandre.lamarre@suse.com>

--- a/config/crd/bases/core.opni.io_collectors.yaml
+++ b/config/crd/bases/core.opni.io_collectors.yaml
@@ -56,6 +56,8 @@ spec:
                   type: object
                   x-kubernetes-map-type: atomic
                 type: array
+              logLevel:
+                type: string
               loggingConfig:
                 properties:
                   name:
