--- a/charts/opni/0.10.0-test4/charts/opni-agent/values.yaml
+++ b/charts/opni/0.10.0-test4/charts/opni-agent/values.yaml
@@ -2,10 +2,6 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-agent:
-  # agent version: "v1" or "v2"
-  version: v2
-
 image:
   repository: rancher/opni
   # Overrides the image tag whose default is the chart appVersion.
@@ -84,8 +80,7 @@ address: ""
 
 # v2 only
 persistence:
-  # mode: pvc
-  # clusters without persistent storage can use a hostPath volume
+  # mode must be one of: hostPath, pvc
   mode: hostPath
   # hostDirectoryPath: /var/lib/opni/plugins
 
