--- a/charts/opni/0.10.0-test4/templates/gateway.yaml
+++ b/charts/opni/0.10.0-test4/templates/gateway.yaml
@@ -10,6 +10,9 @@ spec:
   alerting:
     enabled:  {{ .Values.gateway.alerting.enabled }}
   hostname: {{ .Values.gateway.hostname }}
+  {{- if .Values.image.tag }}
+  agentImageTagOverride: {{ .Values.image.tag }}
+  {{- end }}
   serviceType: {{ .Values.gateway.serviceType }}
   {{- if .Values.gateway.storageType }}
   storageType: {{ .Values.gateway.storageType }}
