--- a/packages/opni-agent/opni-agent/charts/templates/deployment.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/deployment.yaml
@@ -167,11 +167,11 @@ spec:
           hostPath:
             path: {{ default "/var/lib/opni/plugins" .Values.persistence.hostDirectoryPath }}
             type: DirectoryOrCreate
+        {{- end }}
         {{- if eq .Values.persistence.mode "pvc" }}
           persistentVolumeClaim:
             claimName: {{ include "opni-agent.fullname" . }}-plugins
         {{- end }}
-        {{- if -}}
       {{- if .Values.volumes }}
         {{- toYaml .Values.volumes | nindent 8 }}
       {{- end }}
